--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
         <section class="sidebar-grid-item-1">
             <ul class="nav-list">
                 <li class="menuLi">
-                    <a href="#">
+                    <a href="whatwedo.html">
                         <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="M11.178 19.569a.998.998 0 0 0 1.644 0l9-13A.999.999 0 0 0 21 5H3a1.002 1.002 0 0 0-.822 1.569l9 13z"></path></svg>
                         <span class="links_name">What we do?</span> 
                     </a>
                 </li>
                 <li class="menuLi">
-                    <a href="#">
+                    <a href="">
                         <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="M11.178 19.569a.998.998 0 0 0 1.644 0l9-13A.999.999 0 0 0 21 5H3a1.002 1.002 0 0 0-.822 1.569l9 13z"></path></svg>
                         <span class="links_name">Services</span>
                     </a>
                 </li>
                 <li class="menuLi">
-                    <a href="#">
+                    <a href="aboutus.html">
                         <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="M11.178 19.569a.998.998 0 0 0 1.644 0l9-13A.999.999 0 0 0 21 5H3a1.002 1.002 0 0 0-.822 1.569l9 13z"></path></svg>
                         <span class="links_name">About us</span>
                     </a>
                 </li>
                 <li class="menuLi">
-                    <a href="#">
+                    <a href="getintouch.html">
                         <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="M11.178 19.569a.998.998 0 0 0 1.644 0l9-13A.999.999 0 0 0 21 5H3a1.002 1.002 0 0 0-.822 1.569l9 13z"></path></svg>
                         <span class="links_name">Get in touch</span>
                     </a>
