--- a/aboutus.html
+++ b/aboutus.html
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li class="menuLi">
-                    <a href="#">
+                    <a href="services.html">
                         <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="M11.178 19.569a.998.998 0 0 0 1.644 0l9-13A.999.999 0 0 0 21 5H3a1.002 1.002 0 0 0-.822 1.569l9 13z"></path></svg>
                         <span class="links_name">Services</span>
                     </a>
@@ -91,12 +91,12 @@
             </div>
            
             <div class="firstContent">
-                <div class="birthOfAspera">
-                    <div class="text-birthOfAspera">
+                <div class="greyDoubleCol">
+                    <div class="text-greyDoubleCol">
                         <h2>How it all started</h2>
                         <p>Aspera was founded because Nico and Matt are kickass crypto investors... <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ipsa deleniti nulla corrupti laboriosam! Molestias, et quasi esse quaerat nihil veritatis ad facilis optio itaque id eligendi illum ducimus amet?</p>
                     </div>
-                    <div class="picture-birthOfAspera">
+                    <div class="picture-greyDoubleCol">
                         <img src="images/peakpx.jpg" alt="">
                     </div>
                 </div>
