--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li class="menuLi">
-                    <a href="">
+                    <a href="services.html">
                         <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="M11.178 19.569a.998.998 0 0 0 1.644 0l9-13A.999.999 0 0 0 21 5H3a1.002 1.002 0 0 0-.822 1.569l9 13z"></path></svg>
                         <span class="links_name">Services</span>
                     </a>
@@ -89,52 +89,52 @@
             </div>
             <div class="firstContent">
                 <h2>Invest with us</h2>
-                <p>Grow your portfolio with small caps.</p>
+                <p>Start your first digital asset investment today!</p>
                 <div class="gridInvestWithUs">
                     <div class="reason-col">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Stratocumulus_stratiformis_opacus_lacunosus_undulatus_asperitas.jpg">
                     </div>
                     <div class="reason-col">
-                        <h3>Small caps are an opportunity</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate aut praesentium delectus nemo vitae placeat nam voluptatibus similique. A fugit maxime odio officiis voluptas facilis nam impedit nostrum blanditiis eius?</p>
+                        <h3>Smart money flows into digital assets</h3>
+                        <p>Cryptocurrencies gained strong traction for past years, mainly among more conservative institutional investors. With proper risk management and intelligent exposure, one can greatly leverage the high yield potetial of digital asset investments.</p>
                     </div>
                     <div class="reason-col">
-                        <h3>Small caps are an opportunity</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate aut praesentium delectus nemo vitae placeat nam voluptatibus similique. A fugit maxime odio officiis voluptas facilis nam impedit nostrum blanditiis eius?</p>
-                    </div>
-                    <div class="reason-col">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Stratocumulus_stratiformis_opacus_lacunosus_undulatus_asperitas.jpg">
+                        <h3>WEB 3.0 is upon us</h3>
+                        <p>Adoption of decentralization is one of major impacts that Decentralized Finance (DeFi) has inflicted. This present huge amount of new opportunities in financial markets, that have yet to be fully discovered.</p>
                     </div>
                     <div class="reason-col">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Stratocumulus_stratiformis_opacus_lacunosus_undulatus_asperitas.jpg">
                     </div>
                     <div class="reason-col">
-                        <h3>Small caps are an opportunity</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate aut praesentium delectus nemo vitae placeat nam voluptatibus similique. A fugit maxime odio officiis voluptas facilis nam impedit nostrum blanditiis eius?</p>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Stratocumulus_stratiformis_opacus_lacunosus_undulatus_asperitas.jpg">
+                    </div>
+                    <div class="reason-col">
+                        <h3>Responsible risk management</h3>
+                        <p>Cryptocurrencies are well known for high volatility. But with special investment strategy tailored to every individual, diversification and proper risk managmement, it can be used to one's advantage.</p>
                     </div>
                 </div>
             </div>
             <div class="chooseUS">
-                <h2>Why you should choose us</h2>
-                <p>We are professional certified investment advisors</p>
+                <h2>Our qualities</h2>
+                <p>Highly qualified individuals confident in long term potential of cryptocurrencies are eager to be at your service.</p>
                 <div class="boxRow">
                     <div class="box-col1">
                         <!--icon-->
-                        <h4>We are accredited team of investment experts</h4>
+                        <h4>Accredited team</h4>
                         <p>ICON</p>
                         <p>Our team consists of highly educated individuals with rich experience in investing.</p>
                     </div>
                     <div class="box-col1">
                         <!--icon-->
-                        <h4>Diversificate to protect your portfolio</h4>
+                        <h4>Trusted asset management</h4>
                         <p>ICON</p>
-                        <p>Diversified exposure protects your capital at all times.</p>
+                        <p>Security is assured by top-notch measures by centralized exchanges. Only client is a true owner of invested assets.</p>
                     </div>
                     <div class="box-col1">
                         <!--icon-->
-                        <h4>Shifting strategies and hedging measures are applied</h4>
+                        <h4>Shifting strategies and hedging measures</h4>
                         <p>ICON</p>
-                        <p>We shift our strategies based on market behaviour to ensure profit and wealth conservation during difficult times.</p>
+                        <p>We shift our strategies based on market behaviour to ensure profit and wealth conservation during difficult times in the market.</p>
                     </div>
                 </div>
             </div>
