--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,9 +24,12 @@
         </div>
         <div id="overlay"></div>
     </div>
+    <div class="gradientWhiteTransition"></div>
     <main class="pageContent">
         <section class="sidebar-grid-item-1">
-            <ul class="nav-list">
+            <i class="fa fa-bars barsIcon fa-2x" id="openingIcon"></i> 
+            <ul class="nav-list" id="navList">
+                <i class="fa fa-caret-right closeIcon fa-2x" id="closingIcon"></i>
                 <li class="menuLi">
                     <a href="whatwedo.html">
                         <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="M11.178 19.569a.998.998 0 0 0 1.644 0l9-13A.999.999 0 0 0 21 5H3a1.002 1.002 0 0 0-.822 1.569l9 13z"></path></svg>
@@ -54,8 +58,8 @@
         </section>
         <div class="container-grid-item-2">
             <div class="titul">
-                <nav>
-                    <div class="upperbar hidden">
+                <nav class="hidden">
+                    <div class="upperbar">
                         <ul>
                             <li><a href="#" class="text_underline">Register</a></li>
                             <li><a href="#" class="text_underline">Login</a></li>
@@ -64,8 +68,8 @@
                 </nav>
                 <div id="prvni">
                     <h1 class="text_underline">Investment group</h1>
-                    <!-- <img id="landingimg" src="images/investmentlandingDivplaceholder.jpg" alt="mountain"> -->
-                    <p id="popispodh1">We are investment experts with vast experience in all areas of cryptocurrency finances. Our years in the trading world has accumulated into one simple understanding: that despite many different options offered by market, small-cap coins will maximize your gains most efficiently – with potential long-term holding and sustainable low risk.</p>
+                   
+                    <p>We are investment experts with</p>
                     <a href="#" id="growtoday">
                         <button class="colorful-button light butt1">
                             <div class="wrapper">
@@ -89,26 +93,25 @@
             </div>
             <div class="firstContent">
                 <h2>Invest with us</h2>
-                <p>Start your first digital asset investment today!</p>
                 <div class="gridInvestWithUs">
-                    <div class="reason-col">
+                    <div class="reason-col firstPic">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Stratocumulus_stratiformis_opacus_lacunosus_undulatus_asperitas.jpg">
                     </div>
-                    <div class="reason-col">
+                    <div class="reason-col firstDescription">
                         <h3>Smart money flows into digital assets</h3>
                         <p>Cryptocurrencies gained strong traction for past years, mainly among more conservative institutional investors. With proper risk management and intelligent exposure, one can greatly leverage the high yield potetial of digital asset investments.</p>
                     </div>
-                    <div class="reason-col">
+                    <div class="reason-col secondDescription">
                         <h3>WEB 3.0 is upon us</h3>
                         <p>Adoption of decentralization is one of major impacts that Decentralized Finance (DeFi) has inflicted. This present huge amount of new opportunities in financial markets, that have yet to be fully discovered.</p>
                     </div>
-                    <div class="reason-col">
+                    <div class="reason-col secondPic">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Stratocumulus_stratiformis_opacus_lacunosus_undulatus_asperitas.jpg">
                     </div>
-                    <div class="reason-col">
+                    <div class="reason-col thirdPic">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Stratocumulus_stratiformis_opacus_lacunosus_undulatus_asperitas.jpg">
                     </div>
-                    <div class="reason-col">
+                    <div class="reason-col thirdDescription">
                         <h3>Responsible risk management</h3>
                         <p>Cryptocurrencies are well known for high volatility. But with special investment strategy tailored to every individual, diversification and proper risk managmement, it can be used to one's advantage.</p>
                     </div>
@@ -116,7 +119,7 @@
             </div>
             <div class="chooseUS">
                 <h2>Our qualities</h2>
-                <p>Highly qualified individuals confident in long term potential of cryptocurrencies are eager to be at your service.</p>
+                <!-- <p>Highly qualified individuals confident in long term potential of cryptocurrencies are eager to be at your service.</p> -->
                 <div class="boxRow">
                     <div class="box-col1">
                         <!--icon-->
@@ -138,37 +141,50 @@
                     </div>
                 </div>
             </div>
-            <section class="testimonials">
-                <span class="text_underline">Meet our clients</span>
-                <div class="indicator">
-                    <span class="btn active"></span>
-                    <span class="btn"></span>
-                </div>
-                <div class="testimonialContent">
-                    <div class="testimonialRow" id="slide">
-                        <div class="testimonialSlideCol">
-                            <div class="clientText">
-                                <p>Erick is an enterpreneur...</p>
-                                <h3>Erick</h3>
-                                <p>Erick's businesses</p>
+            <div class="testimonialDivision">
+                <h2>References</h2>
+                <section class="testimonials">
+                    <div class="testimonial-container">
+                        <div class="testimonial-wrapper">
+                            <div class="testimonial-card">
+                                <div class="testimonial-card-thumb">
+                                    <img src="./images/pepe-the-frog-foto.jpg" class="client-img" alt="">
+                                </div>
+                                <div class="testimonial-card-body">
+                                    <p class="rating">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptas quis asperiores enim? Quo at, doloribus non aut consequatur quibusdam sint porro id nisi libero ad, modi vitae ex! Vitae.</p>
+                                    <span class="client-span client-name">Erick</span>
+                                    <span class="client-span client-business">Erick's business</span>
+                                </div>
                             </div>
-                            <div class="clientImg">
-                                <img src="images/pepe-the-frog-foto.jpg">
+                            <div class="testimonial-card">
+                                <div class="testimonial-card-thumb">
+                                    <img src="./images/pepe-the-frog-foto.jpg" class="client-img" alt="">
+                                </div>
+                                <div class="testimonial-card-body">
+                                    <p class="rating">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptas quis asperiores enim? Quo at, doloribus non aut consequatur quibusdam sint porro id nisi libero ad, modi vitae ex! Vitae.</p>
+                                    <span class="client-span client-name">Erick</span>
+                                    <span class="client-span client-business">Erick's business</span>
+                                </div>
+                            </div>
+                            <div class="testimonial-card">
+                                <div class="testimonial-card-thumb">
+                                    <img src="./images/pepe-the-frog-foto.jpg" class="client-img" alt="">
+                                </div>
+                                <div class="testimonial-card-body">
+                                    <p class="rating">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptas quis asperiores enim? Quo at, doloribus non aut consequatur quibusdam sint porro id nisi libero ad, modi vitae ex! Vitae.</p>
+                                    <span class="client-span client-name">Erick</span>
+                                    <span class="client-span client-business">Erick's business</span>
+                                </div>
                             </div>
                         </div>
-                        <div class="testimonialSlideCol">
-                            <div class="clientText">
-                                <p>Martin is an enterpreneur...</p>
-                                <h3>Martin</h3>
-                                <p>Martin's businesses</p>
-                            </div>
-                            <div class="clientImg">
-                                <img src="images/pepe-the-frog-foto.jpg">
-                            </div>
+                        <div class="testimonial-indicators">
+                            <button class="active"></button>
+                            <button></button>
+                            <button></button>
                         </div>
                     </div>
-                </div>
-            </section>
+                </section>
+            </div>
         </div>
         <section class="footer-grid-item-3">
             <div class="reftoContactform">
@@ -192,9 +208,9 @@
                 </button>   
             </div>
             <div class="navandLogo">
-                <div class="logoandNewsletter">
+                <div class="Newsletter">
                     <h4>Want to hear our insights? <br> Subscribe to our news letter here!</h4>
-                    <button class="colorful-button light">
+                    <button class="colorful-button light newsletter-butt">
                         <div class="wrapper">
                             <span>subscribe</span>
                             <div class="circle circle-12"></div>
