Prefinalization - chybí logo, naše fotky, mikiho description

--- a/aboutus.html
+++ b/aboutus.html
@@ -67,8 +67,7 @@
                     </div>
                 </nav>
                 <div id="prvni">
-                    <h1 class="text_underline">Who's behind aspera
-                    </h1>
+                    <h1 class="text_underline">Who's behind Icecaps</h1>
                     <p id="popispodh1">We are here to provide you an opportunity to start investing into digital assets the easy way.</p>
                     <!-- <img id="landingimg" src="images/investmentlandingDivplaceholder.jpg" alt="mountain"> -->
                     <a href="#" id="growtoday">
@@ -97,7 +96,8 @@
                 <div class="greyDoubleCol">
                     <div class="text-greyDoubleCol">
                         <h2>How it all started</h2>
-                        <p>Aspera was founded because Nico and Matt are kickass crypto investors... <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ipsa deleniti nulla corrupti laboriosam! Molestias, et quasi esse quaerat nihil veritatis ad facilis optio itaque id eligendi illum ducimus amet?</p>
+                        <p>Icecaps was created to faciliate entry to cryptocurrency market for individuals that prefer professional asset management.</p>
+                        <p>Nicholas Lexa and Matthew Vondrak founded Icecaps due to strong passion for digital assets. Having rich experience gathered through several years helped them to focus on important aspects of the crypto space. This all blended into several strategies being utilized at Icecaps, each being leveraged to present best possible outcomes for individual clients.</p>
                     </div>
                     <div class="picture-greyDoubleCol">
                     </div>
@@ -111,21 +111,21 @@
                         </div>
                         <div class="box-col1 miki-pic-class">
                             <img src="images/pepe-the-frog-foto.jpg" alt="">
-                            <div class="layer">
+                            <!-- <div class="layer">
                                 <p>Nějaký trash moto možná jakože co říct.</p>
-                            </div>
+                            </div> -->
                         </div>
 
                         <div class="box-col1 matt-pic-class">
                             <img src="images/pepe-the-frog-foto.jpg" alt="">
-                            <div class="layer">
+                            <!-- <div class="layer">
                                 <p>Nějaký trash moto možná jakože co říct.</p>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="box-col1 matt-text-class">
                             <h4>Matthew Vondrak</h4>
                             <p class="role">Founder</p>
-                            <p class="description">Matouš je chábr. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas alias labore eum reiciendis nulla. Quaerat, sapiente magni. Quam, commodi. Iure perferendis obcaecati ab itaque minima amet iste dolorum ipsam exercitationem.</p>
+                            <p class="description">Matt is experienced small to mid-cap projects researcher with strong background in technical analysis. Works also as manager of cryptocurrency segment at <a class="hover-underline-animation" href="https://finex.cz/" target="_blank">Finex.cz</a>, a czech mainstream finance medium, and as a freelance web developer. Matt receieved a Bachelor's Degree in Czech technical university in Prague with expected Master's Degree graduation in June this year.</p>
                         </div>
  
                 </div>
