--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                     </div>
                 </nav>
                 <div id="prvni">
-                    <h1 class="text_underline">Investment group</h1>
+                    <h1 class="text_underline">Icecaps capital</h1>
                    
-                    <p>We are investment experts with</p>
+                    <p>A premium asset management company</p>
                     <a href="#" id="growtoday">
                         <button class="colorful-button light butt1">
                             <div class="wrapper">
@@ -115,11 +115,11 @@
                 </div>
             </div>
             <div class="greyDoubleCol">
-                <div class="text-greyDoubleCol">
+                <div class="text-greyDoubleCol-third">
                     <h2>Responsible risk management</h2>
                     <p>Cryptocurrencies are well known for high volatility. But with special investment strategy tailored to every individual, diversification and proper risk managmement, it can be used to one's advantage.</p>
                 </div>
-                <div class="picture-greyDoubleCol thirdpic">
+                <div class="picture-greyDoubleCol-third">
                 </div>
             </div>
             <div class="chooseUS">
@@ -136,7 +136,7 @@
                         <!--icon-->
                         <h4>Trusted asset management</h4>
                         <img class="landingPageIcon" src="">
-                        <p>Security is assured by top-notch measures by centralized exchanges. Only client is a true owner of invested assets.</p>
+                        <p>Security is assured by top-notch measures by centralized exchanges. Only client has right to deposit or withdraw invested assets.</p>
                     </div>
                     <div class="box-col1">
                         <!--icon-->
