--- a/services.html
+++ b/services.html
@@ -92,8 +92,8 @@
             </div>
             <div class="firstContent">
                 <div class="articles">
-                    <p>At XXX, we are conviced that digital assets can generate significant returns with associated high risk. Therefore we offer an intelligent exposure to all spheres of cryptocurrency investing opportunities in two distinct products.</p>
-                    <p>Our clientele is composed of various ovearly high net worth institutional or individual investors seeking sustainable longterm exposure to digital assets with flexible risk management.  Investment strategy, a vital component of sustainable profitable investing, is created individually for each client.</p>
+                    <p>At Icecaps, we are conviced that digital assets can generate significant returns with associated high risk. Therefore we offer an intelligent exposure to all spheres of cryptocurrency investing opportunities in two distinct products.</p>
+                    <p>Our clientele is composed of various high net worth institutional or individual investors seeking sustainable longterm exposure to digital assets with flexible risk management.  Investment strategy, a vital component of sustainable profitable investing, is created individually for each client.</p>
                     <p class="bold">It doesn't matter if you're seeking high risk investments or prefer safer approach mainly focused on wealth conservation. Together we can create a perfect investment strategy for your exposure with optimal risk levels, with highest possible returns.</p>
                     <p><br>Below we present overviews for both products, see for yourself.</p> 
                 </div>
@@ -101,7 +101,7 @@
             <div class="greyDoubleCol">
                 <div class="text-greyDoubleCol">
                     <h2>Digital asset management</h2>
-                    <p>The main product offered by XXX. Complex management of centralized exchange account.</p>
+                    <p>The main product offered by Icecaps. Complex management of centralized exchange account.</p>
                     <button class="colorful-button">
                         <div class="wrapper">
                             <span>See the overview</span>
@@ -127,7 +127,7 @@
                 <div class="picture-greyDoubleCol-second">
                 </div>
                 <div class="text-greyDoubleCol-second">
-                    <h2>Stablecoin yield staking</h2>
+                    <h2>Stablecoin staking</h2>
                     <p>Very low risk side product consisting of proper stablecoin staking allocation, focused mainly on wealth conservation.</p>
                     <button class="colorful-button">
                         <div class="wrapper">
@@ -149,7 +149,7 @@
                 </div>
             </div>
             <div class="textBlock service-details">
-                <p>For service details, please see the associated overview. An individual can exploit both services at once. XXX works only with a close group of customers, where each is treated individually through exclusive strategy tailored to his or her needs. </p>
+                <p>For service details, please see the associated overview. An individual can utilize both services at once. Icecaps works only with a close group of customers, where each is treated individually through exclusive strategy tailored to his or her needs. </p>
             </div>
             
         </div>
