fixing raleway font u tlačítka, preview ikon

--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
                     <div class="box-col1">
                         <!--icon-->
                         <h4>Accredited team</h4>
-                        <img class="landingPageIcon" src="images/icons/verify.png">
+                        <img class="landingPageIcon" src="images/icons/verified.png">
                         <p>Our team consists of highly educated individuals with rich experience in investing.</p>
                     </div>
                     <div class="box-col1">
                         <!--icon-->
                         <h4>Trusted asset management</h4>
-                        <img class="landingPageIcon" src="">
+                        <img class="landingPageIcon" src="images/icons/secure.png">
                         <p>Security is assured by top-notch measures by centralized exchanges. Only client has right to deposit or withdraw invested assets.</p>
                     </div>
                     <div class="box-col1">
                         <!--icon-->
                         <h4>Shifting strategies and hedging measures</h4>
-                        <img class="landingPageIcon" src="">
+                        <img class="landingPageIcon" src="images/icons/balance.png">
                         <p>We shift our strategies based on market behaviour to ensure profit and wealth conservation during difficult times in the market.</p>
                     </div>
                 </div>
