--- a/getintouch.html
+++ b/getintouch.html
@@ -161,8 +161,8 @@
             </div>
         </section>
     </main>
-    <script type=text/javascript src="/js/base.js"></script>
+    <script type=text/javascript src="js/base.js"></script>
     <script type=text/javascript src="js/triangles.js"></script>
-    <script src="js/app.js"></script>
+    
 </body>
 </html>
