sidebar on getintouch

--- a/getintouch.html
+++ b/getintouch.html
@@ -27,7 +27,9 @@
     </div>
     <main class="pageContent">
         <section class="sidebar-grid-item-1">
-            <ul class="nav-list">
+            <i class="fa fa-bars barsIcon fa-2x" id="openingIcon"></i> 
+            <ul class="nav-list" id="navList">
+                <i class="fa fa-caret-right closeIcon fa-2x" id="closingIcon"></i>
                 <li class="menuLi">
                     <a href="whatwedo.html">
                         <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="M11.178 19.569a.998.998 0 0 0 1.644 0l9-13A.999.999 0 0 0 21 5H3a1.002 1.002 0 0 0-.822 1.569l9 13z"></path></svg>
