check logo align

--- a/aboutus.html
+++ b/aboutus.html
@@ -59,40 +59,37 @@
         </section>
         <div class="container-grid-item-2">
             <div class="titul">
-                <nav>
-                    <div class="upperbar hidden">
-                        <ul>
-                            <li><a href="#" class="text_underline">Register</a></li>
-                            <li><a href="#" class="text_underline">Login</a></li>
-                        </ul>
+                <div class="jmenoALogo">
+                    <div id="prvni">
+                        <h1 class="text_underline">Who's behind icecaps</h1>
+                        <p id="popispodh1">We are here to provide you an opportunity to start investing into digital assets the easy way.</p> 
+                        <a href="getintouch.html" id="growtoday">
+                            <button class="colorful-button light butt1">
+                                <div class="wrapper">
+                                    <span>Grow your portfolio</span>
+                                    <div class="circle circle-12"></div>
+                                    <div class="circle circle-11"></div>
+                                    <div class="circle circle-10"></div>
+                                    <div class="circle circle-9"></div>
+                                    <div class="circle circle-8"></div>
+                                    <div class="circle circle-7"></div>
+                                    <div class="circle circle-6"></div>
+                                    <div class="circle circle-5"></div>
+                                    <div class="circle circle-4"></div>
+                                    <div class="circle circle-3"></div>
+                                    <div class="circle circle-2"></div>
+                                    <div class="circle circle-1"></div>
+                                </div>
+                            </button>
+                        </a>
                     </div>
-                </nav>
-                <div id="prvni">
-                    <h1 class="text_underline">Who's behind Icecaps</h1>
-                    <p id="popispodh1">We are here to provide you an opportunity to start investing into digital assets the easy way.</p>
-                    <!-- <img id="landingimg" src="images/investmentlandingDivplaceholder.jpg" alt="mountain"> -->
-                    <a href="#" id="growtoday">
-                        <button class="colorful-button light butt1">
-                            <div class="wrapper">
-                                <span>Grow your portfolio</span>
-                                <div class="circle circle-12"></div>
-                                <div class="circle circle-11"></div>
-                                <div class="circle circle-10"></div>
-                                <div class="circle circle-9"></div>
-                                <div class="circle circle-8"></div>
-                                <div class="circle circle-7"></div>
-                                <div class="circle circle-6"></div>
-                                <div class="circle circle-5"></div>
-                                <div class="circle circle-4"></div>
-                                <div class="circle circle-3"></div>
-                                <div class="circle circle-2"></div>
-                                <div class="circle circle-1"></div>
-                            </div>
-                        </button>
+                    <a href="index.html" class="firemniLogo">
+                        <div>
+                            <img src="images/logo/logo_icecaps_black.png" alt="Icecaps logo">
+                        </div>
                     </a>
                 </div>
             </div>
-           
             <div class="firstContent">
                 <div class="greyDoubleCol">
                     <div class="text-greyDoubleCol">
@@ -136,59 +133,63 @@
         <section class="footer-grid-item-3">
             <div class="reftoContactform">
                 <h3>Ready to grow your portfolio?</h4>
-                <button class="colorful-button secondary butt2">
-                        <div class="wrapper">
-                            <span>invest with us</span>
-                            <div class="circle circle-12"></div>
-                            <div class="circle circle-11"></div>
-                            <div class="circle circle-10"></div>
-                            <div class="circle circle-9"></div>
-                            <div class="circle circle-8"></div>
-                            <div class="circle circle-7"></div>
-                            <div class="circle circle-6"></div>
-                            <div class="circle circle-5"></div>
-                            <div class="circle circle-4"></div>
-                            <div class="circle circle-3"></div>
-                            <div class="circle circle-2"></div>
-                            <div class="circle circle-1"></div>
-                        </div>
-                </button>   
+                    <a href="getintouch.html">
+                        <button class="colorful-button secondary butt2">
+                                <div class="wrapper">
+                                    <span>invest with us</span>
+                                    <div class="circle circle-12"></div>
+                                    <div class="circle circle-11"></div>
+                                    <div class="circle circle-10"></div>
+                                    <div class="circle circle-9"></div>
+                                    <div class="circle circle-8"></div>
+                                    <div class="circle circle-7"></div>
+                                    <div class="circle circle-6"></div>
+                                    <div class="circle circle-5"></div>
+                                    <div class="circle circle-4"></div>
+                                    <div class="circle circle-3"></div>
+                                    <div class="circle circle-2"></div>
+                                    <div class="circle circle-1"></div>
+                                </div>
+                        </button> 
+                    </a>       
             </div>
             <div class="navandLogo">
                 <div class="Newsletter">
                     <h4>Want to hear our insights? <br> Subscribe to our news letter here!</h4>
-                    <button class="colorful-button light">
-                        <div class="wrapper">
-                            <span>subscribe</span>
-                            <div class="circle circle-12"></div>
-                            <div class="circle circle-11"></div>
-                            <div class="circle circle-10"></div>
-                            <div class="circle circle-9"></div>
-                            <div class="circle circle-8"></div>
-                            <div class="circle circle-7"></div>
-                            <div class="circle circle-6"></div>
-                            <div class="circle circle-5"></div>
-                            <div class="circle circle-4"></div>
-                            <div class="circle circle-3"></div>
-                            <div class="circle circle-2"></div>
-                            <div class="circle circle-1"></div>
-                        </div>
-                    </button>
+                    <a href="comingsoon.html">
+                        <button class="colorful-button light newsletter-butt">
+                            <div class="wrapper">
+                                <span>subscribe</span>
+                                <div class="circle circle-12"></div>
+                                <div class="circle circle-11"></div>
+                                <div class="circle circle-10"></div>
+                                <div class="circle circle-9"></div>
+                                <div class="circle circle-8"></div>
+                                <div class="circle circle-7"></div>
+                                <div class="circle circle-6"></div>
+                                <div class="circle circle-5"></div>
+                                <div class="circle circle-4"></div>
+                                <div class="circle circle-3"></div>
+                                <div class="circle circle-2"></div>
+                                <div class="circle circle-1"></div>
+                            </div>
+                        </button>
+                    </a>
                 </div>
                 <div class="footerNavContacts">
                     <nav>
                         <ul>
                             <li>
-                                <a href="#">What we do?</a>
+                                <a href="whatwedo.html">What we do?</a>
                             </li>
                             <li>
-                                <a href="#">Services</a>
+                                <a href="services.html">Services</a>
                             </li>
                             <li>
-                                <a href="#">About us</a>
+                                <a href="aboutus.html">About us</a>
                             </li>
                             <li>
-                                <a href="#">Get in touch</a>
+                                <a href="getintouch.html">Get in touch</a>
                             </li>
                         </ul>
                     </nav>
