--- a/comingsoon.html
+++ b/comingsoon.html
@@ -25,6 +25,7 @@
         </div>
         <div id="overlay"></div>
     </div>
+    <div class="gradientWhiteTransition"></div>
     <main class="pageContent">
         <section class="sidebar-grid-item-1">
             <i class="fa fa-bars barsIcon fa-2x" id="openingIcon"></i> 
@@ -60,8 +61,8 @@
             <div class="titul">
                 <div class="jmenoALogo">
                     <div id="prvni">
-                        <h1 class="text_underline">thank you</h1>
-                        <p id="popispodh1">One of our asset managers will contact you within 5 business days.</p> 
+                        <h1 class="text_underline">COMING SOON</h1>
+                        <p id="popispodh1">Product overview will be added soon. Reach out for us for more information about our services.</p> 
                         <a href="index.html" id="growtoday">
                             <button class="colorful-button light butt1">
                                 <div class="wrapper">
@@ -81,10 +82,10 @@
                                 </div>
                             </button>
                         </a>
-                    </div>
-                </div>      
+                    </div>   
             </div>
-            <div class="gradientfromclouds">
+            
+            <div class="filler"></div>
         </div>
         <section class="footer-grid-item-3">
             <div class="disclaimer">
@@ -93,8 +94,8 @@
             </div>
         </section>
     </main>
-    <script type=text/javascript src="js/triangles.js"></script>
     <script type=text/javascript src="js/base.js"></script>
-    
+    <script type=text/javascript src="js/triangles.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
