--- a/getintouch.html
+++ b/getintouch.html
@@ -58,17 +58,11 @@
         </section>
         <div class="container-grid-item-2">
             <div class="titul">
-                <nav>
-                    <div class="upperbar hidden">
-                        <ul>
-                            <li><a href="#" class="text_underline">Register</a></li>
-                            <li><a href="#" class="text_underline">Login</a></li>
-                        </ul>
+                <div class="jmenoALogo">
+                    <div id="prvni">
+                        <h1 class="text_underline">leave us a message</h1>
                     </div>
-                </nav>
-                <div id="prvni">
-                    <h1 class="text_underline">Leave us a message</h1>    
-                </div>        
+                </div>  
             </div>
             <div class="gradientfromclouds">
                 <div class="contactformContainer">
@@ -119,38 +113,40 @@
             <div class="navandLogo">
                 <div class="Newsletter">
                     <h4>Want to hear our insights? <br> Subscribe to our news letter here!</h4>
-                    <button class="colorful-button light">
-                        <div class="wrapper">
-                            <span>subscribe</span>
-                            <div class="circle circle-12"></div>
-                            <div class="circle circle-11"></div>
-                            <div class="circle circle-10"></div>
-                            <div class="circle circle-9"></div>
-                            <div class="circle circle-8"></div>
-                            <div class="circle circle-7"></div>
-                            <div class="circle circle-6"></div>
-                            <div class="circle circle-5"></div>
-                            <div class="circle circle-4"></div>
-                            <div class="circle circle-3"></div>
-                            <div class="circle circle-2"></div>
-                            <div class="circle circle-1"></div>
-                        </div>
-                    </button>
+                    <a href="comingsoon.html">
+                        <button class="colorful-button light newsletter-butt">
+                            <div class="wrapper">
+                                <span>subscribe</span>
+                                <div class="circle circle-12"></div>
+                                <div class="circle circle-11"></div>
+                                <div class="circle circle-10"></div>
+                                <div class="circle circle-9"></div>
+                                <div class="circle circle-8"></div>
+                                <div class="circle circle-7"></div>
+                                <div class="circle circle-6"></div>
+                                <div class="circle circle-5"></div>
+                                <div class="circle circle-4"></div>
+                                <div class="circle circle-3"></div>
+                                <div class="circle circle-2"></div>
+                                <div class="circle circle-1"></div>
+                            </div>
+                        </button>
+                    </a>
                 </div>
                 <div class="footerNavContacts">
                     <nav>
                         <ul>
                             <li>
-                                <a href="#">What we do?</a>
+                                <a href="whatwedo.html">What we do?</a>
                             </li>
                             <li>
-                                <a href="#">Services</a>
+                                <a href="services.html">Services</a>
                             </li>
                             <li>
-                                <a href="#">About us</a>
+                                <a href="aboutus.html">About us</a>
                             </li>
                             <li>
-                                <a href="#">Get in touch</a>
+                                <a href="getintouch.html">Get in touch</a>
                             </li>
                         </ul>
                     </nav>
