--- a/index.html
+++ b/index.html
@@ -59,36 +59,35 @@
         </section>
         <div class="container-grid-item-2">
             <div class="titul">
-                <nav class="hidden">
-                    <div class="upperbar">
-                        <ul>
-                            <li><a href="#" class="text_underline">Register</a></li>
-                            <li><a href="#" class="text_underline">Login</a></li>
-                        </ul>
+                <div class="jmenoALogo">
+                    <div id="prvni">
+                        <h1 class="text_underline">Icecaps capital</h1>
+                    
+                        <p>A premium asset management company</p>
+                        <a href="getintouch.html" id="growtoday">
+                            <button class="colorful-button light butt1">
+                                <div class="wrapper">
+                                    <span>Grow your portfolio</span>
+                                    <div class="circle circle-12"></div>
+                                    <div class="circle circle-11"></div>
+                                    <div class="circle circle-10"></div>
+                                    <div class="circle circle-9"></div>
+                                    <div class="circle circle-8"></div>
+                                    <div class="circle circle-7"></div>
+                                    <div class="circle circle-6"></div>
+                                    <div class="circle circle-5"></div>
+                                    <div class="circle circle-4"></div>
+                                    <div class="circle circle-3"></div>
+                                    <div class="circle circle-2"></div>
+                                    <div class="circle circle-1"></div>
+                                </div>
+                            </button>
+                        </a>
                     </div>
-                </nav>
-                <div id="prvni">
-                    <h1 class="text_underline">Icecaps capital</h1>
-                   
-                    <p>A premium asset management company</p>
-                    <a href="#" id="growtoday">
-                        <button class="colorful-button light butt1">
-                            <div class="wrapper">
-                                <span>Grow your portfolio</span>
-                                <div class="circle circle-12"></div>
-                                <div class="circle circle-11"></div>
-                                <div class="circle circle-10"></div>
-                                <div class="circle circle-9"></div>
-                                <div class="circle circle-8"></div>
-                                <div class="circle circle-7"></div>
-                                <div class="circle circle-6"></div>
-                                <div class="circle circle-5"></div>
-                                <div class="circle circle-4"></div>
-                                <div class="circle circle-3"></div>
-                                <div class="circle circle-2"></div>
-                                <div class="circle circle-1"></div>
-                            </div>
-                        </button>
+                    <a href="index.html" class="firemniLogo">
+                        <div>
+                            <img src="images/logo/logo_icecaps_black.png" alt="Icecaps logo">
+                        </div>
                     </a>
                 </div>
             </div>
@@ -132,7 +131,7 @@
                     <div class="box-col1">
                         <!--icon-->
                         <h4>Trusted asset management</h4>
-                        <img class="landingPageIcon" src="images/icons/secure.png">
+                        <img class="landingPageIcon" src="images/icons/secure.jpg">
                         <p>Security is assured by top-notch measures by centralized exchanges. Only client has right to deposit or withdraw invested assets.</p>
                     </div>
                     <div class="box-col1">
@@ -191,59 +190,63 @@
         <section class="footer-grid-item-3">
             <div class="reftoContactform">
                 <h3>Ready to grow your portfolio?</h4>
-                <button class="colorful-button secondary butt2">
-                        <div class="wrapper">
-                            <span>invest with us</span>
-                            <div class="circle circle-12"></div>
-                            <div class="circle circle-11"></div>
-                            <div class="circle circle-10"></div>
-                            <div class="circle circle-9"></div>
-                            <div class="circle circle-8"></div>
-                            <div class="circle circle-7"></div>
-                            <div class="circle circle-6"></div>
-                            <div class="circle circle-5"></div>
-                            <div class="circle circle-4"></div>
-                            <div class="circle circle-3"></div>
-                            <div class="circle circle-2"></div>
-                            <div class="circle circle-1"></div>
-                        </div>
-                </button>   
+                <a href="getintouch.html">
+                    <button class="colorful-button secondary butt2">
+                            <div class="wrapper">
+                                <span>invest with us</span>
+                                <div class="circle circle-12"></div>
+                                <div class="circle circle-11"></div>
+                                <div class="circle circle-10"></div>
+                                <div class="circle circle-9"></div>
+                                <div class="circle circle-8"></div>
+                                <div class="circle circle-7"></div>
+                                <div class="circle circle-6"></div>
+                                <div class="circle circle-5"></div>
+                                <div class="circle circle-4"></div>
+                                <div class="circle circle-3"></div>
+                                <div class="circle circle-2"></div>
+                                <div class="circle circle-1"></div>
+                            </div>
+                    </button> 
+                </a>     
             </div>
             <div class="navandLogo">
                 <div class="Newsletter">
                     <h4>Want to hear our insights? <br> Subscribe to our news letter here!</h4>
-                    <button class="colorful-button light newsletter-butt">
-                        <div class="wrapper">
-                            <span>subscribe</span>
-                            <div class="circle circle-12"></div>
-                            <div class="circle circle-11"></div>
-                            <div class="circle circle-10"></div>
-                            <div class="circle circle-9"></div>
-                            <div class="circle circle-8"></div>
-                            <div class="circle circle-7"></div>
-                            <div class="circle circle-6"></div>
-                            <div class="circle circle-5"></div>
-                            <div class="circle circle-4"></div>
-                            <div class="circle circle-3"></div>
-                            <div class="circle circle-2"></div>
-                            <div class="circle circle-1"></div>
-                        </div>
-                    </button>
+                    <a href="comingsoon.html">
+                        <button class="colorful-button light newsletter-butt">
+                            <div class="wrapper">
+                                <span>subscribe</span>
+                                <div class="circle circle-12"></div>
+                                <div class="circle circle-11"></div>
+                                <div class="circle circle-10"></div>
+                                <div class="circle circle-9"></div>
+                                <div class="circle circle-8"></div>
+                                <div class="circle circle-7"></div>
+                                <div class="circle circle-6"></div>
+                                <div class="circle circle-5"></div>
+                                <div class="circle circle-4"></div>
+                                <div class="circle circle-3"></div>
+                                <div class="circle circle-2"></div>
+                                <div class="circle circle-1"></div>
+                            </div>
+                        </button>
+                    </a>
                 </div>
                 <div class="footerNavContacts">
                     <nav>
                         <ul>
                             <li>
-                                <a href="#">What we do?</a>
+                                <a href="whatwedo.html">What we do?</a>
                             </li>
                             <li>
-                                <a href="#">Services</a>
+                                <a href="services.html">Services</a>
                             </li>
                             <li>
-                                <a href="#">About us</a>
+                                <a href="aboutus.html">About us</a>
                             </li>
                             <li>
-                                <a href="#">Get in touch</a>
+                                <a href="getintouch.html">Get in touch</a>
                             </li>
                         </ul>
                     </nav>
@@ -256,7 +259,9 @@
             </div>
         </section>
     </main>
+
     <script type=text/javascript src="js/triangles.js"></script>
     <script type=text/javascript src="js/base.js"></script>
+    <script type=text/javascript src="js/preloader.js"></script>
 </body>
 </html>
