--- a/services.html
+++ b/services.html
@@ -59,21 +59,81 @@
         </section>
         <div class="container-grid-item-2">
             <div class="titul">
-                <nav>
-                    <div class="upperbar hidden">
-                        <ul>
-                            <li><a href="#" class="text_underline">Register</a></li>
-                            <li><a href="#" class="text_underline">Login</a></li>
-                        </ul>
+                <div class="jmenoALogo">
+                    <div id="prvni">
+                        <h1 class="text_underline">Services</h1>
+                        <a href="getintouch.html" id="growtoday">
+                            <button class="colorful-button light butt1">
+                                <div class="wrapper">
+                                    <span>Grow your portfolio</span>
+                                    <div class="circle circle-12"></div>
+                                    <div class="circle circle-11"></div>
+                                    <div class="circle circle-10"></div>
+                                    <div class="circle circle-9"></div>
+                                    <div class="circle circle-8"></div>
+                                    <div class="circle circle-7"></div>
+                                    <div class="circle circle-6"></div>
+                                    <div class="circle circle-5"></div>
+                                    <div class="circle circle-4"></div>
+                                    <div class="circle circle-3"></div>
+                                    <div class="circle circle-2"></div>
+                                    <div class="circle circle-1"></div>
+                                </div>
+                            </button>
+                        </a>
                     </div>
-                </nav>
-                <div id="prvni">
-                    <h1 class="text_underline">Services & Products
-                    </h1>
-                    <a href="#" id="growtoday">
-                        <button class="colorful-button light butt1">
+                    <a href="index.html" class="firemniLogo">
+                        <div>
+                            <img src="images/logo/logo_icecaps_black.png" alt="Icecaps logo">
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="firstContent">
+                <div class="articles">
+                    <p>At Icecaps, we are conviced that digital assets can generate significant returns with associated high risk. Therefore we offer an intelligent exposure to all spheres of cryptocurrency investing opportunities in two distinct products.</p>
+                    <p>Our clientele is composed of various high net worth institutional or individual investors seeking sustainable longterm exposure to digital assets with flexible risk management.  Investment strategy, a vital component of sustainable profitable investing, is created individually for each client.</p>
+                    <p class="bold">It doesn't matter if you're seeking high risk investments or prefer safer approach mainly focused on wealth conservation. Together we can create a perfect investment strategy for your exposure with optimal risk levels, with highest possible returns.</p>
+                    <p><br>Below we present overviews for both products, see for yourself.</p> 
+                </div>
+            </div>
+            <div class="greyDoubleCol">
+                <div class="text-greyDoubleCol">
+                    <h2>Digital asset management</h2>
+                    <p>The main product offered by Icecaps. Complex management of centralized exchange account.</p>
+                    <a class="overviewButton" href="comingsoon.html">
+                        <button class="colorful-button">
                             <div class="wrapper">
-                                <span>Grow your portfolio</span>
+                                <span>See the overview</span>
+                                <div class="circle circle-12"></div>
+                                <div class="circle circle-11"></div>
+                                <div class="circle circle-10"></div>
+                                <div class="circle circle-9"></div>
+                                <div class="circle circle-8"></div>
+                                <div class="circle circle-7"></div>
+                                <div class="circle circle-6"></div>
+                                <div class="circle circle-5"></div>
+                                <div class="circle circle-4"></div>
+                                <div class="circle circle-3"></div>
+                                <div class="circle circle-2"></div>
+                                <div class="circle circle-1"></div>
+                            </div>
+                        </button>
+                    </a>
+                </div>
+                <div class="picture-greyDoubleCol">
+                </div>
+            </div>
+            <div class="greyDoubleCol">
+                <div class="picture-greyDoubleCol-second">
+                </div>
+                <div class="text-greyDoubleCol-second">
+                    <h2>Stablecoin staking</h2>
+                    <p>Very low risk side product consisting of proper stablecoin staking allocation, focused mainly on wealth conservation.</p>
+                    <a class="overviewButton" href="comingsoon.html">
+                        <button class="colorful-button">
+                            <div class="wrapper">
+                                <span>See the overview</span>
                                 <div class="circle circle-12"></div>
                                 <div class="circle circle-11"></div>
                                 <div class="circle circle-10"></div>
@@ -91,64 +151,6 @@
                     </a>
                 </div>
             </div>
-            <div class="firstContent">
-                <div class="articles">
-                    <p>At Icecaps, we are conviced that digital assets can generate significant returns with associated high risk. Therefore we offer an intelligent exposure to all spheres of cryptocurrency investing opportunities in two distinct products.</p>
-                    <p>Our clientele is composed of various high net worth institutional or individual investors seeking sustainable longterm exposure to digital assets with flexible risk management.  Investment strategy, a vital component of sustainable profitable investing, is created individually for each client.</p>
-                    <p class="bold">It doesn't matter if you're seeking high risk investments or prefer safer approach mainly focused on wealth conservation. Together we can create a perfect investment strategy for your exposure with optimal risk levels, with highest possible returns.</p>
-                    <p><br>Below we present overviews for both products, see for yourself.</p> 
-                </div>
-            </div>
-            <div class="greyDoubleCol">
-                <div class="text-greyDoubleCol">
-                    <h2>Digital asset management</h2>
-                    <p>The main product offered by Icecaps. Complex management of centralized exchange account.</p>
-                    <button class="colorful-button">
-                        <div class="wrapper">
-                            <span>See the overview</span>
-                            <div class="circle circle-12"></div>
-                            <div class="circle circle-11"></div>
-                            <div class="circle circle-10"></div>
-                            <div class="circle circle-9"></div>
-                            <div class="circle circle-8"></div>
-                            <div class="circle circle-7"></div>
-                            <div class="circle circle-6"></div>
-                            <div class="circle circle-5"></div>
-                            <div class="circle circle-4"></div>
-                            <div class="circle circle-3"></div>
-                            <div class="circle circle-2"></div>
-                            <div class="circle circle-1"></div>
-                        </div>
-                    </button>
-                </div>
-                <div class="picture-greyDoubleCol">
-                </div>
-            </div>
-            <div class="greyDoubleCol">
-                <div class="picture-greyDoubleCol-second">
-                </div>
-                <div class="text-greyDoubleCol-second">
-                    <h2>Stablecoin staking</h2>
-                    <p>Very low risk side product consisting of proper stablecoin staking allocation, focused mainly on wealth conservation.</p>
-                    <button class="colorful-button">
-                        <div class="wrapper">
-                            <span>See the overview</span>
-                            <div class="circle circle-12"></div>
-                            <div class="circle circle-11"></div>
-                            <div class="circle circle-10"></div>
-                            <div class="circle circle-9"></div>
-                            <div class="circle circle-8"></div>
-                            <div class="circle circle-7"></div>
-                            <div class="circle circle-6"></div>
-                            <div class="circle circle-5"></div>
-                            <div class="circle circle-4"></div>
-                            <div class="circle circle-3"></div>
-                            <div class="circle circle-2"></div>
-                            <div class="circle circle-1"></div>
-                        </div>
-                    </button>
-                </div>
-            </div>
             <div class="textBlock service-details">
                 <p>For service details, please see the associated overview. An individual can utilize both services at once. Icecaps works only with a close group of customers, where each is treated individually through exclusive strategy tailored to his or her needs. </p>
             </div>
@@ -157,59 +159,63 @@
         <section class="footer-grid-item-3">
             <div class="reftoContactform">
                 <h3>Ready to grow your portfolio?</h4>
-                <button class="colorful-button secondary butt2">
-                        <div class="wrapper">
-                            <span>invest with us</span>
-                            <div class="circle circle-12"></div>
-                            <div class="circle circle-11"></div>
-                            <div class="circle circle-10"></div>
-                            <div class="circle circle-9"></div>
-                            <div class="circle circle-8"></div>
-                            <div class="circle circle-7"></div>
-                            <div class="circle circle-6"></div>
-                            <div class="circle circle-5"></div>
-                            <div class="circle circle-4"></div>
-                            <div class="circle circle-3"></div>
-                            <div class="circle circle-2"></div>
-                            <div class="circle circle-1"></div>
-                        </div>
-                </button>   
+                    <a href="getintouch.html">
+                        <button class="colorful-button secondary butt2">
+                                <div class="wrapper">
+                                    <span>invest with us</span>
+                                    <div class="circle circle-12"></div>
+                                    <div class="circle circle-11"></div>
+                                    <div class="circle circle-10"></div>
+                                    <div class="circle circle-9"></div>
+                                    <div class="circle circle-8"></div>
+                                    <div class="circle circle-7"></div>
+                                    <div class="circle circle-6"></div>
+                                    <div class="circle circle-5"></div>
+                                    <div class="circle circle-4"></div>
+                                    <div class="circle circle-3"></div>
+                                    <div class="circle circle-2"></div>
+                                    <div class="circle circle-1"></div>
+                                </div>
+                        </button> 
+                    </a>      
             </div>
             <div class="navandLogo">
                 <div class="Newsletter">
                     <h4>Want to hear our insights? <br> Subscribe to our news letter here!</h4>
-                    <button class="colorful-button light">
-                        <div class="wrapper">
-                            <span>subscribe</span>
-                            <div class="circle circle-12"></div>
-                            <div class="circle circle-11"></div>
-                            <div class="circle circle-10"></div>
-                            <div class="circle circle-9"></div>
-                            <div class="circle circle-8"></div>
-                            <div class="circle circle-7"></div>
-                            <div class="circle circle-6"></div>
-                            <div class="circle circle-5"></div>
-                            <div class="circle circle-4"></div>
-                            <div class="circle circle-3"></div>
-                            <div class="circle circle-2"></div>
-                            <div class="circle circle-1"></div>
-                        </div>
-                    </button>
+                    <a href="comingsoon.html">
+                        <button class="colorful-button light newsletter-butt">
+                            <div class="wrapper">
+                                <span>subscribe</span>
+                                <div class="circle circle-12"></div>
+                                <div class="circle circle-11"></div>
+                                <div class="circle circle-10"></div>
+                                <div class="circle circle-9"></div>
+                                <div class="circle circle-8"></div>
+                                <div class="circle circle-7"></div>
+                                <div class="circle circle-6"></div>
+                                <div class="circle circle-5"></div>
+                                <div class="circle circle-4"></div>
+                                <div class="circle circle-3"></div>
+                                <div class="circle circle-2"></div>
+                                <div class="circle circle-1"></div>
+                            </div>
+                        </button>
+                    </a>
                 </div>
                 <div class="footerNavContacts">
                     <nav>
                         <ul>
                             <li>
-                                <a href="#">What we do?</a>
+                                <a href="whatwedo.html">What we do?</a>
                             </li>
                             <li>
-                                <a href="#">Services</a>
+                                <a href="services.html">Services</a>
                             </li>
                             <li>
-                                <a href="#">About us</a>
+                                <a href="aboutus.html">About us</a>
                             </li>
                             <li>
-                                <a href="#">Get in touch</a>
+                                <a href="getintouch.html">Get in touch</a>
                             </li>
                         </ul>
                     </nav>
