added html ending

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'> tohle je na ty ikony šipek jako font -->
+    <!--favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel='stylesheet' href='https://rawgit.com/OwlCarousel2/OwlCarousel2/develop/dist/assets/owl.carousel.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
     <link rel="stylesheet" href="css/style.css">
@@ -12,7 +19,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Investment Group</title>
+    <meta name="description" content="A team behind Ice Caps - founders, asset managers, researchers, analysts.">
+    <meta name="author" content="Matouš Vondrák">
+    <title>Ice Caps Capital | Team</title>
 </head>
 <body>
     <div class="topbackground">
@@ -61,7 +70,7 @@
             <div class="titul">
                 <div class="jmenoALogo">
                     <div id="prvni">
-                        <h1 class="text_underline">Who's behind icecaps</h1>
+                        <h1 class="text_underline">Who's behind Ice Caps</h1>
                         <p id="popispodh1">We are here to provide you an opportunity to start investing into digital assets the easy way.</p> 
                         <a href="getintouch.html" id="growtoday">
                             <button class="colorful-button light butt1">
@@ -94,7 +103,7 @@
                 <div class="greyDoubleCol">
                     <div class="text-greyDoubleCol">
                         <h2>How it all started</h2>
-                        <p>Icecaps was created to faciliate entry to cryptocurrency market for individuals that prefer professional asset management.</p>
+                        <p>Ice Caps was created to faciliate entry to cryptocurrency market for individuals that prefer professional asset management.</p>
                         <p>Nicholas Lexa and Matthew Vondrak founded Icecaps due to strong passion for digital assets. Having rich experience gathered through several years helped them to focus on important aspects of the crypto space. This all blended into several strategies being utilized at Icecaps, each being leveraged to present best possible outcomes for individual clients.</p>
                     </div>
                     <div class="picture-greyDoubleCol">
@@ -108,17 +117,11 @@
                             <p class="description">Miki je chábr. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat temporibus pariatur, quidem consequatur provident aperiam consequuntur nihil tempora! Inventore aliquam corporis nobis eos architecto beatae officia quis officiis vel facere.</p>
                         </div>
                         <div class="box-col1 miki-pic-class">
-                            <img src="images/pepe-the-frog-foto.jpg" alt="">
-                            <!-- <div class="layer">
-                                <p>Nějaký trash moto možná jakože co říct.</p>
-                            </div> -->
+                            <img src="images/miki.png" alt="">
                         </div>
 
                         <div class="box-col1 matt-pic-class">
                             <img src="images/pepe-the-frog-foto.jpg" alt="">
-                            <!-- <div class="layer">
-                                <p>Nějaký trash moto možná jakože co říct.</p>
-                            </div> -->
                         </div>
                         <div class="box-col1 matt-text-class">
                             <h4>Matthew Vondrak</h4>
