--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'> tohle je na ty ikony šipek jako font -->
+    <!--favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <!--fonty a style-->
     <link rel='stylesheet' href='https://rawgit.com/OwlCarousel2/OwlCarousel2/develop/dist/assets/owl.carousel.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
     <link rel="stylesheet" href="css/style.css">
@@ -12,7 +19,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Investment Group</title>
+    <meta name="description" content="A professional cryptocurrency asset management company.">
+    <meta name="author" content="Matouš Vondrák">
+    <title>Ice Caps Capital | Cryptocurrency Investments</title>
 </head>
 <body>
     <div class="topbackground">
@@ -61,7 +70,7 @@
             <div class="titul">
                 <div class="jmenoALogo">
                     <div id="prvni">
-                        <h1 class="text_underline">Icecaps capital</h1>
+                        <h1 class="text_underline">Ice Caps Capital</h1>
                     
                         <p>A premium asset management company</p>
                         <a href="getintouch.html" id="growtoday">
@@ -131,13 +140,13 @@
                     <div class="box-col1">
                         <!--icon-->
                         <h4>Trusted asset management</h4>
-                        <img class="landingPageIcon" src="images/icons/secure.jpg">
+                        <img class="landingPageIcon" id="secure" src="images/icons/secure.png">
                         <p>Security is assured by top-notch measures by centralized exchanges. Only client has right to deposit or withdraw invested assets.</p>
                     </div>
                     <div class="box-col1">
                         <!--icon-->
                         <h4>Shifting strategies and hedging measures</h4>
-                        <img class="landingPageIcon" src="images/icons/balance.png">
+                        <img class="landingPageIcon" id="balance" src="images/icons/balance.png">
                         <p>We shift our strategies based on market behaviour to ensure profit and wealth conservation during difficult times in the market.</p>
                     </div>
                 </div>
@@ -250,7 +259,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <img src="images/logo.jpg">
+                    <img src="images/logo/logo_icecaps_black.png">
                 </div>
             </div>
             <div class="disclaimer">
