--- a/whatwedo.html
+++ b/whatwedo.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'> tohle je na ty ikony šipek jako font -->
+    <!--favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel='stylesheet' href='https://rawgit.com/OwlCarousel2/OwlCarousel2/develop/dist/assets/owl.carousel.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
     <link rel="stylesheet" href="css/style.css">
@@ -12,6 +19,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The main scope of services of Ice Caps - cryptocurrency asset management.">
+    <meta name="author" content="Matouš Vondrák">
     <title>Investment Group</title>
 </head>
 <body>
@@ -109,7 +118,7 @@
                             <p>Revolutionary Proof-of-Work blockchain with Chainweb technology supporting smart contracts written in Pact and enabling more than 300 000 TPS with extremely low fees.</p>
                         </div>
                         <div class="boxSecond">
-                            <p class="green percent">More than 10 000 % profit on all time high.</p>
+                            <p class="green percent">More than 3 500 % profit on all time high.</p>
                         </div>    
                     </div>
                     <div class="box-col1">
@@ -121,19 +130,19 @@
                             <p>A project pioneering the first decentralized trustless multi-party computation custodial network, enabling purely decentralized custody.</p>
                         </div>
                         <div class="boxSecond">  
-                            <p class="green percent">More than 7 000 % profit on all time high.</p>
+                            <p class="green percent">More than 600 % profit on all time high.</p>
                         </div> 
                     </div>
                     <div class="box-col1">
                         <div class="boxFirst">
-                            <h4>LUKSO</h4>
+                            <h4>Saito</h4>
                             <div class="projectIconDiv">
-                                <img class="projectIcon" src="images/icons/lukso.png">
+                                <img class="projectIcon" src="images/icons/saito.png">
                             </div>
-                            <p> LUKSO aims to create standards and tools that will enable a new economy based on Cultural Currencies, Digital Certificates and Universal Public Profiles. Developed by founder of Ethereum.</p>
+                            <p>A unique L1 blockchain designed for permissionless and scalable alternative P2P network, can be utilized as decentralised infrasctructure for Facebook, Twitter or for example Amazon.</p>
                         </div>
                         <div class="boxSecond">  
-                            <p class="green percent">More than 5 000 % profit on all time high.</p>
+                            <p class="green percent">More than 1 000 % profit on all time high.</p>
                         </div> 
                     </div>
                 </div>
